sass/foss.module.sass
@import url(https://f.nove.team/fonts/inter/conf.css)

section.hero
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    width: 100%
    min-height: calc(100vh - 68px - 50px * 2)
    padding: 50px 0
    & h1.title
        font-size: 42px
        font-weight: 700
        margin: 5px 0
        text-align: center
        & span
            color: var(--accent-st)
    & p.desc
        font-size: 24px
        max-width: 900px
        text-align: center
        margin: 10px
        color: var(--font-st)
    & ul
        margin: 30px 0
        padding: 0
        list-style: none
        display: flex
        gap: 2rem
        align-items: center
        @media screen and (max-width: 1170px)
            flex-direction: column
            gap: 1rem
        & li
            & a
                display: block
                color: black
                text-decoration: none
                padding: 20px
                border-radius: 20px
                background: var(--secondary)
                max-width: 200px
                width: 100%
                height: fit-content
                transition-duration: .2s
                &:hover
                    background: var(--border-st)
                @media screen and (max-width: 1170px)
                    max-width: 100%
                    width: calc(100% - 20px * 2)
                    min-height: fit-content
                & h1
                    margin: 7px 0
                    margin-top: 0
                    font-size: 20px
                    font-weight: 600
                    color: var(--accent-rd)
                & p
                    margin: 5px 0
                    margin-bottom: 0
                    font-size: 16px
                    font-weight: 400
                    color: var(--font-nd)

